--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "bootstrap": "^4.0.0-beta",
     "git-release": "^0.6.0",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
+    "moment-duration-format": "^1.3.0",
     "popper.js": "^1.12.5",
+    "url-loader": "^0.6.2",
     "wavesurfer.js": "^2.0.0-beta01"
   },
   "devDependencies": {
@@ -19,6 +22,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
